@@ -10,14 +10,21 @@
 
 package org.eclipse.sw360.rest.resourceserver;
 
+import io.swagger.v3.oas.models.Operation;
+import io.swagger.v3.oas.models.PathItem;
 import io.swagger.v3.oas.models.info.Info;
 import io.swagger.v3.oas.models.Components;
 import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.info.License;
+import io.swagger.v3.oas.models.media.Content;
+import io.swagger.v3.oas.models.media.MediaType;
+import io.swagger.v3.oas.models.media.Schema;
+import io.swagger.v3.oas.models.parameters.PathParameter;
+import io.swagger.v3.oas.models.responses.ApiResponse;
+import io.swagger.v3.oas.models.responses.ApiResponses;
 import io.swagger.v3.oas.models.security.SecurityScheme;
 import io.swagger.v3.oas.models.servers.Server;
 import org.eclipse.sw360.datahandler.common.CommonUtils;
-import org.eclipse.sw360.datahandler.thrift.users.UserGroup;
 import org.eclipse.sw360.rest.common.PropertyUtils;
 import org.eclipse.sw360.rest.common.Sw360CORSFilter;
 import org.eclipse.sw360.rest.resourceserver.core.OpenAPIPaginationHelper;
@@ -25,6 +32,7 @@ import org.eclipse.sw360.rest.resourceserver.core.RestControllerHelper;
 import org.eclipse.sw360.rest.resourceserver.security.apiToken.ApiTokenAuthenticationFilter;
 import org.springdoc.core.utils.SpringDocUtils;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.actuate.health.Health;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.boot.builder.SpringApplicationBuilder;
 import org.springframework.boot.web.servlet.FilterRegistrationBean;
@@ -41,57 +49,26 @@ import org.springframework.web.servlet.config.annotation.CorsRegistry;
 
 import java.util.*;
 
+import static org.eclipse.sw360.datahandler.common.SW360Constants.REST_SERVER_PATH_URL;
+
 @SpringBootApplication
 @Import(Sw360CORSFilter.class)
 public class Sw360ResourceServer extends SpringBootServletInitializer {
 
-    private static final String REST_BASE_PATH = "/api";
+    public static final String REST_BASE_PATH = "/api";
 
     @Value("${spring.data.rest.default-page-size:10}")
     private int defaultPageSize;
 
-    private static final String SW360_PROPERTIES_FILE_PATH = "/sw360.properties";
     private static final String VERSION_INFO_PROPERTIES_FILE = "/restInfo.properties";
     private static final String VERSION_INFO_KEY = "sw360RestVersion";
     private static final String CURIE_NAMESPACE = "sw360";
     private static final String APPLICATION_ID = "rest";
 
-    public static final String API_TOKEN_HASH_SALT;
-    public static final String API_TOKEN_MAX_VALIDITY_READ_IN_DAYS;
-    public static final String API_TOKEN_MAX_VALIDITY_WRITE_IN_DAYS;
-    public static final UserGroup API_WRITE_ACCESS_USERGROUP;
-    public static final Set<String> DOMAIN;
-    public static final String REPORT_FILENAME_MAPPING;
-    public static final String JWKS_ISSUER_URL;
-    public static final String JWKS_ENDPOINT_URL;
-    public static final Boolean IS_JWKS_VALIDATION_ENABLED;
-    public static final Boolean IS_FORCE_UPDATE_ENABLED;
-    public static final UserGroup CONFIG_WRITE_ACCESS_USERGROUP;
-    public static final UserGroup CONFIG_ADMIN_ACCESS_USERGROUP;
-    private static final String DEFAULT_WRITE_ACCESS_USERGROUP = UserGroup.SW360_ADMIN.name();
-    private static final String DEFAULT_ADMIN_ACCESS_USERGROUP = UserGroup.SW360_ADMIN.name();
-    private static final String SERVER_PATH_URL;
     private static final String APPLICATION_NAME = "/resource";
     private static final Map<Object, Object> versionInfo;
 
     static {
-        Properties props = CommonUtils.loadProperties(Sw360ResourceServer.class, SW360_PROPERTIES_FILE_PATH);
-        API_TOKEN_MAX_VALIDITY_READ_IN_DAYS = props.getProperty("rest.apitoken.read.validity.days", "90");
-        API_TOKEN_MAX_VALIDITY_WRITE_IN_DAYS = props.getProperty("rest.apitoken.write.validity.days", "30");
-        API_TOKEN_HASH_SALT = props.getProperty("rest.apitoken.hash.salt", "$2a$04$Software360RestApiSalt");
-        API_WRITE_ACCESS_USERGROUP = UserGroup.valueOf(props.getProperty("rest.write.access.usergroup", UserGroup.ADMIN.name()));
-        DOMAIN = CommonUtils.splitToSet(props.getProperty("domain",
-                "Application Software, Documentation, Embedded Software, Hardware, Test and Diagnostics"));
-        REPORT_FILENAME_MAPPING = props.getProperty("org.eclipse.sw360.licensinfo.projectclearing.templatemapping", "");
-        JWKS_ISSUER_URL = props.getProperty("jwks.issuer.url", null);
-        JWKS_ENDPOINT_URL = props.getProperty("jwks.endpoint.url", null);
-        IS_JWKS_VALIDATION_ENABLED = Boolean.parseBoolean(props.getProperty("jwks.validation.enabled", "false"));
-        IS_FORCE_UPDATE_ENABLED = Boolean.parseBoolean(
-                System.getProperty("RunRestForceUpdateTest", props.getProperty("rest.force.update.enabled", "false")));
-        CONFIG_WRITE_ACCESS_USERGROUP = UserGroup.valueOf(props.getProperty("rest.write.access.usergroup", DEFAULT_WRITE_ACCESS_USERGROUP));
-        CONFIG_ADMIN_ACCESS_USERGROUP = UserGroup.valueOf(props.getProperty("rest.admin.access.usergroup", DEFAULT_ADMIN_ACCESS_USERGROUP));
-        SERVER_PATH_URL = props.getProperty("backend.url", "http://localhost:8080");
-
         versionInfo = new HashMap<>();
         Properties properties = CommonUtils.loadProperties(Sw360ResourceServer.class, VERSION_INFO_PROPERTIES_FILE, false);
         versionInfo.putAll(properties);
@@ -148,7 +125,7 @@ public class Sw360ResourceServer extends SpringBootServletInitializer {
     @Bean
     public OpenAPI customOpenAPI() {
         Server server = new Server();
-        server.setUrl(SERVER_PATH_URL + APPLICATION_NAME + REST_BASE_PATH);
+        server.setUrl(REST_SERVER_PATH_URL + APPLICATION_NAME + REST_BASE_PATH);
         server.setDescription("Current instance.");
         Object restVersion = versionInfo.get(VERSION_INFO_KEY);
         String restVersionString = "1.0.0";
@@ -168,6 +145,70 @@ public class Sw360ResourceServer extends SpringBootServletInitializer {
                 .info(new Info().title("SW360 API").license(new License().name("EPL-2.0")
                                 .url("https://github.com/eclipse-sw360/sw360/blob/main/LICENSE"))
                         .version(restVersionString))
-                .servers(List.of(server));
+                .servers(List.of(server))
+                .path("/health", new PathItem().get(
+                        new Operation().tags(Collections.singletonList("Health"))
+                                .summary("Health endpoint").operationId("health")
+                                .responses(new ApiResponses().addApiResponse("200",
+                                        new ApiResponse().description("OK")
+                                                .content(new Content()
+                                                        .addMediaType(org.springframework.http.MediaType.APPLICATION_JSON_VALUE, new MediaType()
+                                                                .example("""
+                                                                        {
+                                                                          "status": "UP",
+                                                                          "components": {
+                                                                            "SW360Rest": {
+                                                                              "status": "UP",
+                                                                              "details": {
+                                                                                "Rest State": {
+                                                                                  "isDbReachable": true,
+                                                                                  "isThriftReachable": true
+                                                                                }
+                                                                              }
+                                                                            },
+                                                                            "ping": {
+                                                                              "status": "UP"
+                                                                            }
+                                                                          }
+                                                                        }
+                                                                        """)
+                                                                .schema(new Schema<Health>())
+                                                ))
+                                ))
+                ))
+                .path("/config", new PathItem().get(
+                        new Operation().tags(Collections.singletonList("Health"))
+                                .summary("Configuration properties").operationId("get-config")
+                                .responses(new ApiResponses().addApiResponse("200",
+                                        new ApiResponse().description("OK")
+                                                .content(new Content()
+                                                        .addMediaType(org.springframework.http.MediaType.APPLICATION_JSON_VALUE, new MediaType()
+                                                                .example("""
+                                                                        {
+                                                                          "property.1": "value1",
+                                                                          "property.2": "false",
+                                                                          "property.3": "value3,value4"
+                                                                        }
+                                                                        """)
+                                                                .schema(new Schema<Map<String, String>>())
+                                                        ))
+                                ))
+                ))
+                .path("/config/{key}", new PathItem().get(
+                        new Operation().tags(Collections.singletonList("Health"))
+                                .summary("Get single configuration property").operationId("get-single-config")
+                                .addParametersItem(new PathParameter()
+                                        .required(true).in("path").description("Property key").example("operating.systems")
+                                        .name("key")
+                                )
+                                .responses(new ApiResponses().addApiResponse("200",
+                                        new ApiResponse().description("OK")
+                                                .content(new Content()
+                                                        .addMediaType(org.springframework.http.MediaType.TEXT_PLAIN_VALUE, new MediaType()
+                                                                .example("Android,BSD,iOS,Linux,OS X,QNX,Microsoft Windows,Windows Phone,IBM z/OS")
+                                                                .schema(new Schema<Map<String, String>>())
+                                                        ))
+                                ))
+                ));
     }
 }
